--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "common-tags": "^1.8.0",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
-    "insult": "^0.0.3"
+    "insult": "^0.0.3",
+    "nodemon": "^2.0.7"
   }
 }
